--- a/index.html
+++ b/index.html
@@ -253,8 +253,8 @@
 						<h4 class="box__text"><span class="box__text-inner box__text-inner--rotated2">SER</span></h4>
 					</div>
 					<p class="overlay__content_image_three">
-					A veces me cuesta pararme y ejecutar planes porque mi cabeza no me deja pensar en una sola cosa, puedo quedarme horas, con esa voz que me habla y analiza todo a mi alrededor; el pensamiento humano que aprende y desaprende, la parte racional que se alimenta de razones y muchas otras veces de significados.<br>
-					Cuando es más sensible que otras, puedo reconocer y entender a la gente por sus traumas y crianzas, por sus vacíos.  Me fijo en el ser individual. <br>
+					A veces me cuesta pararme y ejecutar planes porque mi cabeza no me deja pensar en una sola cosa, puedo quedarme horas, con esa voz que me habla y analiza todo a mi alrededor; el pensamiento humano que aprende y desaprende, la parte racional que se alimenta de razones y muchas otras veces de significados.<br><br>
+					Cuando es más sensible que otras, puedo reconocer y entender a la gente por sus traumas y crianzas, por sus vacíos.  Me fijo en el ser individual. <br><br>
 					Cuando la voz es crítica, cuando me veo a mi misma primero para ver a los demás, puedo distinguir las ideologías, el funcionamiento del sistema, de la publicidad, del mensaje a proyectar de unos cuantos hacia todos los muchos que nos hemos olvidado de vivir y solo trabajamos para que esta creación humana que se basa en la acumulación de cosas a través del dinero pueda seguir funcionando para los que lo manejan.
 					</p>
 					<p class="overlay__content_image_three">
@@ -337,7 +337,7 @@
 						<h4 class="box__text"><span class="box__text-inner">REVOLUCIONA</span></h4>
 					</div>
 					<p class="overlay__content_image_three">
-						Los que nos damos cuenta de esta mentira, tomamos una posición de protesta y rebeldía, tratando de hacer que las cosas a nuestro alrededor y juicio tengan sentido. En vista de que necesitamos la colectividad para lograr cualquier objetivo, desde abrir una puerta hasta cumplir un sueño, nótese cuán difícil es convivir con el mundo y mantenerse independiente. <br>
+						Los que nos damos cuenta de esta mentira, tomamos una posición de protesta y rebeldía, tratando de hacer que las cosas a nuestro alrededor y juicio tengan sentido. En vista de que necesitamos la colectividad para lograr cualquier objetivo, desde abrir una puerta hasta cumplir un sueño, nótese cuán difícil es convivir con el mundo y mantenerse independiente. <br><br>
 						A lo que me refiero es que en la medida de lo posible tratemos de arrancar prejuicios, cuestionar realidades o evadir información que se esparce con la intención de que uno actúe de determinada manera.<br>
 						La música es un buen medio de comunicación para transmitir este mensaje. Para muchos ha constituido una fuente de expresión e identidad.<br>
 						<br><br>
@@ -378,15 +378,12 @@
 							
 					</p>
 					<p class="overlay__content_image_three">
-							Me estreso demasiado, analizo mucho a las personas a mi alrededor y a las distintas ideologías que se forman como burbujas. Si voy a querer hacer algo, voy a necesitar estar lúcida, sin ningún tipo de bloqueo mental. 
-							<br>
-
+							
 							Por esto siempre pienso en niveles e intensidades del pensamiento humano, porque hay personas que aún en sus debilidades, nunca se perdieron, siempre se mantuvieron firmes defendiendo lo que aman hacer y ser. 
-							<br>
+							<br><br>
 							Creo que es necesario cumplir nuestros sueños porque una vez que los obtenemos, encontramos nuestro espacio y lugar en la vida, en esta vida. 
 							Solo así, podremos construir para dejar legado. Trascender es una necesidad del ser humano por naturaleza, este es uno de los motivos por el que las personas anhelan tener hijos. Sin embargo y debido a los diferentes niveles e intensidades, la necesidad de trascender para los que buscamos la independencia del sistema, se basa principalmente en dejar algo hecho con nuestras manos que pueda servir en un momento u otro.
-
-							<br>
+							<br><br>
 							Finalmente, para quienes han elegido no seguir al resto, habría que recordarles que también es necesario elegir ser mejor que el resto. Si no, estarán de igual manera perdidos, y nosotrxs no queremos ser así, nos repetimos mil veces más: no vamos a perdernos.				
 					</p>
 				</div>
