--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		</svg>
 		<main>
 			<div class="content">
-				<h3 class="sub_title">Y así como el arcoiris y la refracción de la luz, esta historia no existe más que por ti, porque estás vivo. Todo lo descrito es parte de un personaje ficticio que invita a reflexionar sobre encontrar nuestro propósito de vida en este poco tiempo que aún nos queda por aquí. Lo único real es la música y estas bandas peruanas que demuestran que el talento no es generacional. Genialidad siempre hubo y habrá, en todos los contextos, lo importante es que encuentre su lugar. 
+				<h3 class="sub_title">Y así como el arcoiris y la refracción de la luz, esta historia no existe más que por ti, porque estás vivo. Todo lo descrito es parte de un personaje ficticio que invita a reflexionar sobre lo importante que es encontrar nuestro propósito de vida en este poco tiempo que aún nos queda por aquí. Lo único real es la música y estas bandas peruanas que demuestran que el talento no es generacional. Genialidad siempre hubo y habrá, en todos los contextos, lo importante es que encuentre su lugar. 
 				</h3>
 				<div class="grid">
 					<a class="grid__item" href="#preview-1">
@@ -183,7 +183,7 @@
 					</div>
 					<p class="overlay__content_image_three">							
 							En mi opinión el pensamiento humano tiene varias escalas de intensidad; son como cables interconectados, además tiene varios niveles; son como cables paralelos. <br><br>
-							De estos dos, solo la intensidad es estimulante. Los niveles se definen a base de esfuerzo, metas alcanzadas y calidad(privilegios, oportunidades, etc) de vida. 
+							De estos dos, solo la intensidad es estimulante. Los niveles se definen a base de esfuerzo, metas alcanzadas y calidad (privilegios, oportunidades, etc) de vida. 
 							<br><br>
 							Con respecto a lo primero, esto se explica, por ejemplo en que un tema enfocado desde un solo punto de vista puede rápidamente, dependiendo de la habilidad y autoconocimiento, convertirse en algo tan profundo cuando es analizado por completo que creemos que, ya, así es.  <br><br>
 							Y de esta manera es que gestamos y adoptamos diversas ideologías.
@@ -209,7 +209,7 @@
 								<cite> Peter Thiel, De cero a uno.</cite>
 						</p>
 						<p class="overlay__content_image_three">
-								El avance tecnológico en la generación que estamos viviendo es un arma de defensa por la inmediatez con la que podemos conseguir las cosas. Ya no estamos obligados a trabajar en el campo, ya no estamos obligados a ir a la fábrica, e incluso ni siquiera a la oficina. Por lo que ya no son los castigos lo que nos paralizan contra la protesta, sino el entretenimiento, el placer, el ego. Y visto desde ese punto, el uso de algunas drogas constituyen un factor interesante pues forman parte de la definición de entretenimiento pero ya que van dirigidos generalmente a un sector alternativo del mainstream y debido a su ilegalidad han retribuido a sus creadores todo un emporio de violencia, conformismo y autodestrucción.					
+								El avance tecnológico en la generación que estamos viviendo es un arma de defensa por la inmediatez con la que podemos conseguir las cosas. Ya no estamos obligados a trabajar en el campo, ya no estamos obligados a ir a la fábrica, e incluso ni siquiera a la oficina. Por lo que ya no son los castigos lo que nos paralizan contra la protesta, sino el entretenimiento, el placer, el ego. Y visto desde ese punto, el uso de algunas drogas constituyen un factor interesante pues forman parte de la definición de entretenimiento pero ya que van dirigidos generalmente a un sector alternativo del mainstream y debido a su ilegalidad han retribuido a sus creadores todo un emporio de violencia, conformismo y destrucción.					
 						</p>
 				
 				</div>
@@ -258,7 +258,7 @@
 					Cuando la voz es crítica, cuando me veo a mi misma primero para ver a los demás, puedo distinguir las ideologías, el funcionamiento del sistema, de la publicidad, del mensaje a proyectar de unos cuantos hacia todos los muchos que nos hemos olvidado de vivir y solo trabajamos para que esta creación humana que se basa en la acumulación de cosas a través del dinero pueda seguir funcionando para los que lo manejan.
 					</p>
 					<p class="overlay__content_image_three">
-					Obviamente, en teoría y gracias a la iteración innegable de las ideologías, especificamente la ideología del consumismo en el capitalismo, cualquiera podría llegar a manejar este círculo de poder pero ¿a costa de qué?, es inaudito no darse cuenta que le pertenece a una élite. Y en consecuencia, la gente, la población que al final hace la masa, se adormece.
+					Obviamente, en teoría y gracias a la iteración innegable de las ideologías, especificamente la ideología del consumismo en el capitalismo, cualquiera podría llegar a manejar este círculo de poder pero, ¿a costa de qué?, es inaudito no darse cuenta que le pertenece a una élite. Y en consecuencia, la gente, la población que al final hace la masa, se adormece.
 					<br><br>
 					Se adormece quien cree en las noticias de televisión, o se fanatiza con alguna postura: se duerme el socialista, el capitalista, el que hace deporte y come sano si lleva su vida jactándose de ser mejor que el resto. Quién cree que la violencia o la viveza puede representar una solución, quién acepta a quién lo cree también lo hace.					
 					</p>
@@ -338,9 +338,9 @@
 					</div>
 					<p class="overlay__content_image_three">
 						Los que nos damos cuenta de esta mentira, tomamos una posición de protesta y rebeldía, tratando de hacer que las cosas a nuestro alrededor y juicio tengan sentido. En vista de que necesitamos la colectividad para lograr cualquier objetivo, desde abrir una puerta hasta cumplir un sueño, nótese cuán difícil es convivir con el mundo y mantenerse independiente. <br><br>
-						A lo que me refiero es que en la medida de lo posible tratemos de arrancar prejuicios, cuestionar realidades o evadir información que se esparce con la intención de que uno actúe de determinada manera.<br>
+						A lo que me refiero es que en la medida de lo posible tratemos de arrancar prejuicios, cuestionar realidades o evadir información que se esparce con la intención de que uno actúe de determinada manera.<br><br>
 						La música es un buen medio de comunicación para transmitir este mensaje. Para muchos ha constituido una fuente de expresión e identidad.<br>
-						<br><br>
+						<br>
 						Es decir es un espacio maravilloso para refugiarse y seguir manteniendo vigentes nuestros sueños a través de la manifestación de ideas, narración de historias y la apropiación de un estilo de vida paralelo sin censura, en donde podemos ser y expresar lo que realmente sentimos aunque esto de alguna u otra manera puede llegar a ser un poco incrédulo para otros de niveles diferentes de pensamiento.						
 					</p>
 				</div>				
@@ -352,7 +352,7 @@
 						<!-- <h4 class="box__text box__text--bottom"><span class="box__text-inner"></span></h4> -->
 					</div>
 					<p class="overlay__content_image_three">
-						David Byrne en su libro "How the music works", hace referencia a Theodor Adorno, filósofo alemán e investigador musical, quién siguiendo el legado de Schoenberg, postula la filosofía de la nueva música de corte crítico marxista y que considera a la máquina de discos por ejemplo, "un aparato que atrae a los incautos a los bares con la promesa de deleite y felicidad. Pero, igual que una droga, en lugar de proporcionar verdadera felicidad la música de una máquina de discos solo crea más deseo de ella." (2014, pág 100) Lo menciono porque he notado que incluso en la posición de protesta y rebeldía contra el establishment, las personas se siguen adormeciendo; se quedan en el surrealismo, en el hedonismo, en romperlo todo porque está mal, y se hacen daño igualmente, a través de las drogas. Es verdad que el ser humano de manera innata tiende a la autodestrucción, pero justamente porque también somos seres racionales es que esa característica no puede ser un factor definitivo para nuestra existencia.
+						David Byrne en su libro "How the music works", hace referencia a Theodor Adorno, filósofo alemán e investigador musical, quién siguiendo el legado de Schoenberg, postula la filosofía de la nueva música de corte crítico marxista y que considera a la máquina de discos por ejemplo, "un aparato que atrae a los incautos a los bares con la promesa de deleite y felicidad. Pero, igual que una droga, en lugar de proporcionar verdadera felicidad la música de una máquina de discos solo crea más deseo de ella." (2014, pág 100) Lo menciono porque he notado que incluso en la posición de protesta y rebeldía contra el establishment, las personas se siguen adormeciendo; se quedan en el surrealismo, en el hedonismo, en romperlo todo porque todo está mal, y se hacen daño igualmente, a través de las drogas. Es verdad que el ser humano de manera innata tiende a la autodestrucción, pero justamente porque también somos seres racionales es que esa característica no puede ser un factor definitivo para nuestra existencia.
 						La droga te destruye porque te retrae, te aísla. Creo que no necesito ahondar sobre el uso de esta palabra porque en su renuncia al significado, la voz encuentra libertad para expresarse.
 					</p>
 					<p class="overlay__content_image_three">
@@ -361,7 +361,7 @@
 						Por esto es tan necesario lograr el autoconocimiento y la independencia, para evitar ser absorbidos por nuestros impulsos o por el destino y sus inevitables fracasos.
 						<br><br>
 						No tengo la respuesta a la pregunta: <strong>¿en qué momento empezamos a conformarnos con lo que vivimos?</strong>, solo una crítica basada en mi experiencia. <br>
-						Tal vez todo este dilema alrededor de lo que nos distrae de cumplir nuestros sueños, a lo que yo llamo adormecimiento, puede estar relacionado a las drogas en dos puntos aparentemente contradictorios: que sea provocado por la repetición;la droga como constructor, o que lo acentúe más debido a otras causas; la droga como conductor. Este autoboicot lo tenemos todos y está escondido, o no existe y lo creamos por defectos propios de cualidades subdesarrolladas.  				
+						Tal vez todo este dilema alrededor de lo que nos distrae de cumplir nuestros sueños, a lo que yo llamo adormecimiento, puede estar relacionado a las drogas en dos puntos aparentemente contradictorios: que sea provocado por la repetición;la droga como constructor, o que lo acentúe más debido a otras causas; la droga como conductor. Este autoboicot intrapersonal lo tenemos todos y está escondido, o no existe y lo creamos por defectos propios de cualidades subdesarrolladas.  				
 					</p>
 				</div>
 				<div class="overlay__item" id="preview-11">
