--- a/index.html
+++ b/index.html
@@ -145,8 +145,11 @@
 						<h4 class="box__text"><span class="box__text-inner">Vivir</span></h4>
 						<!-- <div class="box__deco">&#10014;</div> -->
 					</div>
-					<p class="overlay__content_image_one">A veces las cosas no tienen un mayor sentido que salvarte, esto es punk. "Agarra lo que tengas, toca lo que puedas y di lo que quieras, porque de lo que se trata es de salvarte. En esas épocas las opciones que tenías eran, te volvías terrorista, te afincabas en el sistema, te suicidabas...o hacías arte." <cite> Wicho García, Narcosis.</cite></p>
-					<p class="overlay__content_image_one">Todas las veces que se me pasaba el efecto y estas voces me dejaban de hablar, me tenía miedo porque me sentía sola y pensaba que todo lo que me había dicho durante horas y horas, era realidad objetiva. Hubo veces en las que no podía ni asomarme a la ventana porque pensaba; esa misma voz que parece haberme abandonado, se transformará en fuerza dentro de mí y me obligará a caer. Lloraba, aún no comprendía que estaba deprimida. Tiempo después y después de varias caídas me levanté con la única convicción del autoconocimiento. No es bueno quedarse encerrado sin saber quién eres, o empezar a hacer cosas en estado automático, caer en la trampa no es ninguna salida. Ahora que puedo estar más consciente, me asomé y observé todo a mi alrededor: Me hallé en los libros, la música, en mis amigos, en la simetría de Miraflores, en el redescubrimiento de mi propósito de vida.			
+					<p class="overlay__content_image_one">A veces las cosas no tienen un mayor sentido que salvarte, esto es punk. "Agarra lo que tengas, toca lo que puedas y di lo que quieras, porque de lo que se trata es de salvarte. En esas épocas las opciones que tenías eran, te volvías terrorista, te afincabas en el sistema, te suicidabas...o hacías arte." <cite> Wicho García, Narcosis.</cite><br><br>
+						Todas las veces que se me pasaba el efecto y estas voces me dejaban de hablar, me tenía miedo porque me sentía sola y pensaba que todo lo que me había dicho durante horas y horas, era realidad objetiva.
+					</p>
+
+					<p class="overlay__content_image_one"> Hubo veces en las que no podía ni asomarme a la ventana porque pensaba; esa misma voz que parece haberme abandonado, se transformará en fuerza dentro de mí y me obligará a caer. Lloraba, aún no comprendía que estaba deprimida. Tiempo después y después de varias caídas me levanté con la única convicción del autoconocimiento. No es bueno quedarse encerrado sin saber quién eres, o empezar a hacer cosas en estado automático, caer en la trampa no es ninguna salida. Ahora que puedo estar más consciente, me asomé y observé todo a mi alrededor: Me hallé en los libros, la música, en mis amigos, en la simetría de Miraflores, en el redescubrimiento de mi propósito de vida.			
 					</p>
 				</div>
 				<div class="overlay__item" id="preview-2">
@@ -233,13 +236,13 @@
 							haré que ocurra algo para volver a intentar, 
 							construyendo cada pequeño desastre.
 							<br><br>
-							Pero ¿qué sucedió?
+							Pero ¿qué sucedió?,
 							¿por qué están los amigos tan tristes? 
 
 							ahora que el fuego se extinguió buscarán prenderse por dentro 
 							a pesar de lograrlo arden muy solos en compañía 
 
-							defectuosa combustión para despedirnos 
+							defectuosa combustión para despedirnos, 
 							cada uno tomando un camino distinto 
 
 							hasta apagarnos muy lentamente por el camino.
@@ -277,23 +280,23 @@
 									no te apures si es que aún no la consigues, oh no...<br>
 									después de todo seguiré a tu lado<br>
 									en las buenas y malas, como siempre he estado<br>
-									la vida es dura, pero nada es imposible<br>
+									la vida es dura, pero nada es imposible,<br>
 									amor...<br>
 
-									tu no estas sola!!!<br>
+									tú no estas sola!!!<br>
 									cuentas conmigo para <br>
 									cualquier cosa!!!!<br>
 									no lo olvides...no.<br>
 
-									Aún recuerdo esos dias cuando estaba en el piso<br>
-									y tu me levantaste solo querias hablar conmigo<br>
+									Aún recuerdo esos días cuando estaba en el piso<br>
+									y tú me levantaste solo querías hablar conmigo<br>
 									eso dijiste, oh dios...<br>
-									gracias al cielo por enviarme un angel<br>
+									gracias al cielo por enviarme un ángel<br>
 									tan maravilloso	para salvarme<br>
 									si alguna vez estuve solo, triste y perdido<br>
 									ya no...<br>
 
-									tu no estas sola!!!<br>
+									tú no estas sola!!!<br>
 									cuentas conmigo para <br>
 									cualquier cosa!!!! <br>
 									no lo olvides<br>
